--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "mongoose": "^4.6.3"
+    "mongoose": "^4.6.3",
+    "swig": "^1.4.2"
   },
   "repository": "",
   "author": "Rhyme",
