--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {},
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "mongoose": "^4.6.3",
     "swig": "^1.4.2"
