--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
   },
   "repository": "",
   "author": "Rhyme",
-  "license": "Rhyme"
+  "license": "Rhyme",
+  "devDependencies": {
+    "babel-eslint": "^7.1.1",
+    "eslint": "^3.11.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.7.1"
+  }
 }
