--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "private": "true",
   "version": "0.1.0",
   "main": "app.js",
-  "scripts": {},
+  "scripts": {
+    "start": "node www/www.dev"
+  },
   "dependencies": {
+    "babel-register": "^6.18.0",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
@@ -17,6 +20,17 @@
   "license": "Rhyme",
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-display-name": "^6.8.0",
+    "babel-plugin-transform-regenerator": "^6.21.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-plugin-typecheck": "^3.9.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
     "eslint": "^3.11.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.7.1"
