--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node www/www.dev"
   },
   "dependencies": {
+    "amazon-mws-node": "^1.0.4",
     "babel-register": "^6.18.0",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
