--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
+    "lodash": "^4.17.4",
+    "moment": "^2.17.1",
     "mongoose": "^4.6.3",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "xml2js": "^0.4.17"
   },
   "repository": "",
   "author": "Rhyme",
